--- a/development_setup/docker-compose.yml
+++ b/development_setup/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2'
 services:
 
   frappe:
-    image: pipech/erpnext-docker-debian:stable
+    build: .
     ports:
       - "8000-8005:8000-8005"   #webserver_port
       - "9000-9005:9000-9005"   #socketio_port
