--- a/development_setup/docker-compose.yml
+++ b/development_setup/docker-compose.yml
@@ -11,5 +11,6 @@ services:
     volumes:
       - ./data/bench/apps:/home/frappe/bench/apps
       - ./data/bench/sites:/home/frappe/bench/sites
+      - ./data/mysql:/var/lib/mysql
     stdin_open: true
     tty: true
