add HTTPS support with traefik, update production setup readme

--- a/production_setup/conf/traefik-conf/traefik.toml
+++ b/production_setup/conf/traefik-conf/traefik.toml
@@ -18,3 +18,11 @@ debug = true
     [entryPoints.https]
     address = ":443"
         [entryPoints.https.tls]
+
+[acme]
+email = "user@example.com"
+storage = "/etc/traefik/acme/acme.json"
+entryPoint = "https"
+onHostRule = true
+    [acme.httpChallenge]
+    entryPoint = "http"
