--- a/production_setup/env/frappe_app.env
+++ b/production_setup/env/frappe_app.env
@@ -10,4 +10,4 @@
 benchNewSiteName=t01.spacecode.co.th
 
 # NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th [Separate with space]
-NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th
+NGINX_SERVER_NAME=t01.spacecode.co.th
