remove traefik dashboard, change example domain name

--- a/production_setup/conf/traefik-conf/traefik.toml
+++ b/production_setup/conf/traefik-conf/traefik.toml
@@ -6,9 +6,8 @@ defaultEntryPoints = ["https","http"]
 endpoint = "unix:///var/run/docker.sock"
 exposedByDefault = false
 
-[api]
-dashboard = true
-debug = true
+[metrics]
+    [metrics.prometheus]
 
 [entryPoints]
     [entryPoints.http]
