--- a/production_setup/env/frappe_app.env
+++ b/production_setup/env/frappe_app.env
@@ -6,8 +6,8 @@
 
 # We'll use this only once when start new stack after that
 # if you want to create new site exec into frappe container
-# and run bench new-site t02.spacecode.co.th
-benchNewSiteName=t01.spacecode.co.th
+# and run bench new-site example2.com
+benchNewSiteName=example1.com
 
-# NGINX_SERVER_NAME=t01.spacecode.co.th t02.spacecode.co.th [Separate with space]
-NGINX_SERVER_NAME=t01.spacecode.co.th
+# NGINX_SERVER_NAME=example1.com example2.com [Separate with space]
+NGINX_SERVER_NAME=example1.com
