--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,11 +24,13 @@ build-mas-py2:
     docker_container_name: ${docker_img_tag}-con
   script:
     - docker build -t ${docker_img}:${docker_img_tag}
+      --no-cache
       --build-arg pythonVersion=${python_version}
       --build-arg appBranch=${app_branch}
       .
     - docker push ${docker_img}:${docker_img_tag}
     - docker build -t ${docker_img}:${docker_img_wsql_tag}
+      --no-cache
       --build-arg base_img=${docker_img}:${docker_img_tag}
       with_sql/.
     - docker push ${docker_img}:${docker_img_wsql_tag}
