--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,5 @@ build-mas-py2:
     - echo ${docker_img}:${docker_img_wsql_tag}
     - echo ${docker_img}:${docker_img_tag}
     - docker build
-      --build-arg base_img=${docker_img}:${docker_img_tag}
+      --build-arg base_img=pipech/erpnext-docker-debian:mas-py2-latest
       with_sql/.
