--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,5 @@ build-mas-py2:
     - echo ${docker_img}:${docker_img_wsql_tag}
     - echo ${docker_img}:${docker_img_tag}
     - docker build
-      --build-arg aaa="${docker_img}:${docker_img_wsql_tag}"
+      --build-arg base_image_from=${docker_img}:${docker_img_wsql_tag}
       with_sql/.
