--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,8 +23,12 @@ build-mas-py2:
     docker_img_wsql_tag: ${docker_img_tag}-w.sql
     docker_container_name: ${docker_img_tag}-con
   script:
-    - apt-get update -y
-    - apt-get install -y python-dev python-pip
+    - apk update
+    - apk add --update \
+      python \
+      python-dev \
+      py-pip \
+      build-base
     - python image-tag.py
       ${docker_container_name}
       ${docker_img}
