--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,12 +23,5 @@ build-mas-py2:
     docker_img_wsql_tag: ${docker_img_tag}-w.sql
     docker_container_name: ${docker_img_tag}-con
   script:
-    - apk update && apk add \
-      python-dev \
-      py-pip \
-      build-base
-    - python image-tag.py
-      ${docker_container_name}
-      ${docker_img}
-      ${docker_img_tag}
-      ${docker_img_wsql_tag}
+    - cat /etc/*-release
+
