--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,5 +23,10 @@ build-mas-py2:
     docker_img_wsql_tag: ${docker_img_tag}-w.sql
     docker_container_name: ${docker_img_tag}-con
   script:
-    - cat /etc/*-release
-
+    - apk update && apk add \
+      python3
+    - python image-tag.py
+      ${docker_container_name}
+      ${docker_img}
+      ${docker_img_tag}
+      ${docker_img_wsql_tag}
