--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build-mas-py2:
     docker_img_wsql_tag: ${docker_img_tag}-w.sql
     docker_container_name: ${docker_img_tag}-con
   script:
-    - apk update && apk add python
+    - apk update && apk add python3
     - python image_tag.py
       ${docker_container_name}
       ${docker_img}
