--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,25 +17,27 @@ stages:
 build-mas-py2:
   stage: build
   variables:
-    docker_img_tag: "mas-py2-latest"
     python_version: "python"
     app_branch: "master"
-    docker_img_wsql_tag: ${docker_img_tag}-w.sql
+    python_abbr: "py2"
+    branch_abbr: "mas"
+    docker_img_tag: ${branch_abbr}-${python_abbr}-latest
+    docker_img_wsql_tag: ${branch_abbr}-${python_abbr}-w.sql-latest
     docker_container_name: ${docker_img_tag}-con
   script:
-    # # build base image
-    # - docker build -t ${docker_img}:${docker_img_tag}
-    #   --no-cache
-    #   --build-arg pythonVersion=${python_version}
-    #   --build-arg appBranch=${app_branch}
-    #   .
-    # - docker push ${docker_img}:${docker_img_tag}
-    # # build image with sql
-    # - docker build -t ${docker_img}:${docker_img_wsql_tag}
-    #   --no-cache
-    #   --build-arg base_image_from=${docker_img}:${docker_img_tag}
-    #   with_sql/.
-    # - docker push ${docker_img}:${docker_img_wsql_tag}
+    # build base image
+    - docker build -t ${docker_img}:${docker_img_tag}
+      --no-cache
+      --build-arg pythonVersion=${python_version}
+      --build-arg appBranch=${app_branch}
+      .
+    - docker push ${docker_img}:${docker_img_tag}
+    # build image with sql
+    - docker build -t ${docker_img}:${docker_img_wsql_tag}
+      --no-cache
+      --build-arg base_image_from=${docker_img}:${docker_img_tag}
+      with_sql/.
+    - docker push ${docker_img}:${docker_img_wsql_tag}
     # tag image version
     - apk update && apk add python3
     - python3 image_tag.py
