--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,29 +22,21 @@ build-mas-py2:
     python_abbr: "py2"
     branch_abbr: "mas"
     docker_img_tag: ${branch_abbr}-${python_abbr}-latest
-    docker_img_wsql_tag: ${branch_abbr}-${python_abbr}-w.sql-latest
     docker_container_name: ${branch_abbr}-${python_abbr}-con
   script:
-    # build base image
+    # build image
     - docker build -t ${docker_img}:${docker_img_tag}
       --no-cache
       --build-arg pythonVersion=${python_version}
       --build-arg appBranch=${app_branch}
       .
     - docker push ${docker_img}:${docker_img_tag}
-    # build image with sql
-    - docker build -t ${docker_img}:${docker_img_wsql_tag}
-      --no-cache
-      --build-arg base_image_from=${docker_img}:${docker_img_tag}
-      with_sql/.
-    - docker push ${docker_img}:${docker_img_wsql_tag}
     # tag image version
     - apk update && apk add python3
     - python3 image_tag.py
       ${docker_container_name}
       ${docker_img}
       ${docker_img_tag}
-      ${docker_img_wsql_tag}
 
 build-sta-py2:
   stage: build
@@ -54,29 +46,21 @@ build-sta-py2:
     python_abbr: "py2"
     branch_abbr: "sta"
     docker_img_tag: ${branch_abbr}-${python_abbr}-latest
-    docker_img_wsql_tag: ${branch_abbr}-${python_abbr}-w.sql-latest
     docker_container_name: ${branch_abbr}-${python_abbr}-con
   script:
-    # build base image
+    # build image
     - docker build -t ${docker_img}:${docker_img_tag}
       --no-cache
       --build-arg pythonVersion=${python_version}
       --build-arg appBranch=${app_branch}
       .
     - docker push ${docker_img}:${docker_img_tag}
-    # build image with sql
-    - docker build -t ${docker_img}:${docker_img_wsql_tag}
-      --no-cache
-      --build-arg base_image_from=${docker_img}:${docker_img_tag}
-      with_sql/.
-    - docker push ${docker_img}:${docker_img_wsql_tag}
     # tag image version
     - apk update && apk add python3
     - python3 image_tag.py
       ${docker_container_name}
       ${docker_img}
       ${docker_img_tag}
-      ${docker_img_wsql_tag}
 
 build-sta-py3:
   stage: build
@@ -86,29 +70,21 @@ build-sta-py3:
     python_abbr: "py3"
     branch_abbr: "sta"
     docker_img_tag: ${branch_abbr}-${python_abbr}-latest
-    docker_img_wsql_tag: ${branch_abbr}-${python_abbr}-w.sql-latest
     docker_container_name: ${branch_abbr}-${python_abbr}-con
   script:
-    # build base image
+    # build image
     - docker build -t ${docker_img}:${docker_img_tag}
       --no-cache
       --build-arg pythonVersion=${python_version}
       --build-arg appBranch=${app_branch}
       .
     - docker push ${docker_img}:${docker_img_tag}
-    # build image with sql
-    - docker build -t ${docker_img}:${docker_img_wsql_tag}
-      --no-cache
-      --build-arg base_image_from=${docker_img}:${docker_img_tag}
-      with_sql/.
-    - docker push ${docker_img}:${docker_img_wsql_tag}
     # tag image version
     - apk update && apk add python3
     - python3 image_tag.py
       ${docker_container_name}
       ${docker_img}
       ${docker_img_tag}
-      ${docker_img_wsql_tag}
 
 build-dev-py3:
   stage: build
@@ -118,26 +94,18 @@ build-dev-py3:
     python_abbr: "py3"
     branch_abbr: "dev"
     docker_img_tag: ${branch_abbr}-${python_abbr}-latest
-    docker_img_wsql_tag: ${branch_abbr}-${python_abbr}-w.sql-latest
     docker_container_name: ${branch_abbr}-${python_abbr}-con
   script:
-    # build base image
+    # build image
     - docker build -t ${docker_img}:${docker_img_tag}
       --no-cache
       --build-arg pythonVersion=${python_version}
       --build-arg appBranch=${app_branch}
       .
     - docker push ${docker_img}:${docker_img_tag}
-    # build image with sql
-    - docker build -t ${docker_img}:${docker_img_wsql_tag}
-      --no-cache
-      --build-arg base_image_from=${docker_img}:${docker_img_tag}
-      with_sql/.
-    - docker push ${docker_img}:${docker_img_wsql_tag}
     # tag image version
     - apk update && apk add python3
     - python3 image_tag.py
       ${docker_container_name}
       ${docker_img}
       ${docker_img_tag}
-      ${docker_img_wsql_tag}
