--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ services:
   - docker
 
 before_install:
-  - docker login -u ${dh_user} -p ${dh_pass}
+  - echo "${dh_pass}" | docker login -u "${dh_user}" --password-stdin
 
 install:
   - "./.travis/install.sh"
