trying more echo

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ script:
 - echo "$[test_bye]"
 - echo "%[test_bye]"
 - echo "[test_bye]"
+- echo ${test_bye}
+- echo $[test_bye]
+- echo %[test_bye]
+- echo "[test_bye]"
 - echo "hello"
 - echo "${python_version}"
 - echo "${app_branch}"
