--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,7 @@ services:
 before_install:
 - echo "${dh_pass}" | docker login -u "$dh_user" --password-stdin
 install:
-  - chmod +x \
-    ./.travis/define_variable.sh \
-    ./.travis/build_image.sh \
-    ./.travis/push_latest.sh \
-    ./.travis/push_version.sh
+  - chmod -R +x ./.travis
   - "./.travis/define_variable.sh"
   - "./.travis/build_image.sh"
   - "./.travis/push_latest.sh"
