--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - echo "${dh_pass}" | docker login -u "$dh_user" --password-stdin
 install:
   - chmod -R +x ./.travis
-  - "./.travis/define_variable.sh"
-  - "./.travis/build_image.sh"
-  - "./.travis/push_latest.sh"
-  - "./.travis/push_version.sh"
+  - . .travis/define_variable.sh
+  - ./.travis/build_image.sh
+  - ./.travis/push_latest.sh
+  - ./.travis/push_version.sh
