mysql fixing attempt

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_install:
 install:
   - chmod -R +x ./.travis
   - . .travis/define_variable.sh
-  - ./.travis/build_image.sh
-  - ./.travis/push_latest.sh
-  - ./.travis/push_version.sh
+  - .travis/build_image.sh
+  - .travis/push_latest.sh
+  - .travis/push_version.sh
