--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ services:
 before_install:
 - echo "${dh_pass}" | docker login -u "$dh_user" --password-stdin
 install:
-  # - chmod -R +x ./.travis
-  # - . .travis/define_variable.sh
-  # - .travis/build_image.sh
-  # - .travis/push_latest.sh
-  # - .travis/push_version.sh
-  - docker build -t mysql-fails sql_test/.
-  - docker run -it mysql-fails /bin/bash -c 'find /var/lib/mysql/mysql -exec touch -c -a {} + && service mysql start'
+  - chmod -R +x ./.travis
+  - . .travis/define_variable.sh
+  - .travis/build_image.sh
+  - .travis/push_latest.sh
+  - .travis/push_version.sh
