--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
+os: windows
 env:
   global:
   - docker_img="pipech/erpnext-docker-debian"
@@ -15,6 +16,5 @@ install:
   - chmod -R +x ./.travis
   - . .travis/define_variable.sh
   - .travis/build_image.sh
-  - docker run -d -p 8000:8000 -p 9000:9000 --name "${docker_container_name}" "${docker_img}:${docker_img_tag}" /bin/bash -c 'sudo find /var/lib/mysql/mysql -exec touch -c -a {} + && sudo service mysql start'
   - .travis/push_latest.sh
   - .travis/push_version.sh
