--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 dist: xenial
 language: python
+python:
+  - "3.6"
 env:
   global:
   - docker_img="pipech/erpnext-docker-debian"
@@ -15,6 +17,4 @@ before_install:
 install:
   - chmod -R +x ./.travis
   - . .travis/define_variable.sh
-  - .travis/build_image.sh
-  - .travis/push_latest.sh
-  - .travis/push_version.sh
+  - python .travis/image_tag.py
