add build and push step

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,7 @@ before_install:
 install:
   - chmod -R +x ./.travis
   - . .travis/define_variable.sh
+  - .travis/build_image.sh
+  - .travis/push_latest.sh
 script:
   - python .travis/image_tag.py
