--- a/production_setup/prd.yml
+++ b/production_setup/prd.yml
@@ -16,7 +16,7 @@ services:
         target: /etc/traefik/traefik.toml
 
   frappe:
-    image: pipech/erpnext-docker-debian:stable
+    image: pipech/erpnext-docker-debian:mas-py3-latest
     deploy:
       replicas: 1
     volumes:
