--- a/development_setup_vscode/.devcontainer/launch.json
+++ b/development_setup_vscode/.devcontainer/launch.json
@@ -1,19 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-        // Start bench normally
-        // Can use dynamic reload
-        {
-            "name": "bench-start",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/frappe/frappe/utils/bench_helper.py",
-            "args": [
-                "frappe", "serve", "--port", "8000"
-            ],
-            "pythonPath": "${workspaceFolder}/../env/bin/python",
-            "cwd": "${workspaceFolder}/../sites"
-        },
         // Start bench with debug tools
         // Can't use dynamic reload, have to press (Ctrl + Shift + F5) to reload
         // https://github.com/frappe/erpnext/wiki/VSCode-Debugging-for-Frappe-Python
@@ -27,6 +14,24 @@
             ],
             "pythonPath": "${workspaceFolder}/../env/bin/python",
             "cwd": "${workspaceFolder}/../sites",
+        },
+        // Start bench normally
+        // Can use dynamic reload
+        // Won't work with Werkzeug version 0.15++
+        // Reinstall Werkzeug to version 0.14
+        // > ". /home/frappe/bench/env/bin/activate"
+        // > "pip install 'Werkzeug==0.14.1' --force-reinstall"
+        // > "deactivate"
+        {
+            "name": "bench-start",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/frappe/frappe/utils/bench_helper.py",
+            "args": [
+                "frappe", "serve", "--port", "8000"
+            ],
+            "pythonPath": "${workspaceFolder}/../env/bin/python",
+            "cwd": "${workspaceFolder}/../sites"
         },
         // // Start JS debug tools
         // // Have to set remote-debugging-port in chrome
