--- a/development_setup_vscode/.devcontainer/Dockerfile
+++ b/development_setup_vscode/.devcontainer/Dockerfile
@@ -2,6 +2,7 @@ FROM pipech/erpnext-docker-debian:mas-py3-latest
 
 COPY ./entrypoint.sh /home/frappe/bench/entrypoint.sh
 COPY ./launch.json /home/frappe/bench/apps/.vscode/launch.json
+COPY ./set_remote.sql /home/frappe/bench/init.sql
 
 # prevent permission denied
 RUN sudo chmod 777 /home/frappe/bench/entrypoint.sh \
@@ -19,7 +20,10 @@ RUN sudo chmod 777 /home/frappe/bench/entrypoint.sh \
     # comment out bench serve line on Procfile
     && sed -i 's/web: bench serve --port 8000/# &/' Procfile \
     # without this js won't update untill server is reload
-    && bench set-config developer_mode 1
+    && bench set-config developer_mode 1 \
+    # set mysql remote user
+    && sudo service mysql start \
+    && mysql -h localhost "-uroot" "-ptravis" < "/home/frappe/bench/init.sql"
 
 # without this socket.io won't work (don't know why)
 ENV DEV_SERVER=1
