--- a/development_setup_vscode/.devcontainer/Dockerfile
+++ b/development_setup_vscode/.devcontainer/Dockerfile
@@ -1,22 +1,17 @@
 FROM pipech/erpnext-docker-debian:mas-py3-latest
 
-COPY ./entrypoint.sh /home/frappe/bench/entrypoint.sh
-COPY ./launch.json /home/frappe/bench/apps/.vscode/launch.json
-COPY ./set_remote.sql /home/frappe/bench/init.sql
-COPY ./eslint /home/frappe/bench/apps/
+COPY --chown=frappe ./entrypoint.sh /home/frappe/bench/entrypoint.sh
+COPY --chown=frappe ./vscode /home/frappe/bench/apps/.vscode/
+COPY --chown=frappe ./sql /home/frappe/bench/
+COPY --chown=frappe ./eslint /home/frappe/bench/apps/
 
-# prevent permission denied
-RUN sudo chmod 777 /home/frappe/bench/entrypoint.sh \
-    && sudo chown -R frappe:frappe /home/frappe/bench/apps/.vscode \
-    # prevent - vscode error when trying to attatch to container
-    # >> mkdir: cannot create directory ‘/root’: Permission denied
-    # I don't think we need to concern about security in dev container.
-    && sudo chmod 777 /root \
+# prevent - vscode error when trying to attatch to container
+# >> mkdir: cannot create directory ‘/root’: Permission denied
+# I don't think we need to concern about security in dev container.
+RUN sudo chmod 777 /root \
     # install python3 pip
     && curl "https://bootstrap.pypa.io/get-pip.py" -o "get-pip.py" \
     && sudo python3 get-pip.py \
-    # install flake8 for vs code
-    && /usr/bin/python3 -m pip install -U flake8 --user \
     # setup debugger with vs code 
     # comment out bench serve line on Procfile
     && sed -i 's/web: bench serve --port 8000/# &/' Procfile \
@@ -24,7 +19,9 @@ RUN sudo chmod 777 /home/frappe/bench/entrypoint.sh \
     && bench set-config developer_mode 1 \
     # set mysql remote user
     && sudo service mysql start \
-    && mysql -h localhost "-uroot" "-ptravis" < "/home/frappe/bench/init.sql" \
+    && mysql -h localhost "-uroot" "-ptravis" < "/home/frappe/bench/set_remote.sql" \
+    # install flake8 for vs code
+    && /usr/bin/python3 -m pip install -U flake8 --user \
     # install eslint, using Google JavaScript style guide
     && sudo npm install -g eslint eslint-config-google
 
