--- a/development_setup_vscode/.devcontainer/docker-compose.yml
+++ b/development_setup_vscode/.devcontainer/docker-compose.yml
@@ -9,3 +9,6 @@ services:
       - "6787:6787" #file_watcher_port
       - "3306:3306" #mysql
     command: ["/home/frappe/bench/entrypoint.sh"]
+    volumes:
+      # for ease of copy file between docker container and host
+      - ../shared_vscode_dev:/home/frappe/bench/apps/shared_vscode_dev
