--- a/production_setup/custom_app/Dockerfile
+++ b/production_setup/custom_app/Dockerfile
@@ -1,4 +1,4 @@
-FROM pipech/erpnext-docker-debian:mas-py3-latest
+FROM pipech/erpnext-docker-debian:v12-py3-latest
 
 # set workdir
 USER $systemUser
